## Process this file with Automake to produce Makefile.in -*-Makefile-*-

olndir = $(includedir)/oln
nobase_oln_HEADERS =				\
  arith/internal/opdecls.hh			\
  arith/logic.hh				\
  arith/ops.hh					\
  basics.hh					\
  basics1d.hh					\
  basics2d.hh					\
  basics3d.hh					\
  config/system.hh				\
  convert/basics.hh				\
  convert/bound.hh				\
  convert/colorconv.hh				\
  convert/conversion.hh				\
  convert/conversion_ng_se.hh			\
  convert/force.hh				\
  convert/nrgbxyz.hh				\
  convert/nrgbyiq.hh				\
  convert/nrgbyuv.hh				\
  convert/nrgbhsi.hh				\
  convert/nrgbhsl.hh				\
  convert/nrgbhsv.hh				\
  convert/rgbnrgb.hh				\
  convert/rgbxyz.hh				\
  convol/fast_gaussian.hh			\
  convol/fast_gaussian.hxx			\
  convol/fast_gaussian_coefficient.hh		\
  core/accum.hh					\
  core/apply.hh					\
  core/bkd_iter1d.hh				\
  core/bkd_iter2d.hh				\
  core/bkd_iter3d.hh				\
  core/border.hh				\
  core/border1d.hh				\
  core/border2d.hh				\
  core/border3d.hh				\
  core/compose.hh				\
  core/contract.hh				\
  core/coord.hh					\
  core/dpoint.hh				\
  core/dpoint1d.hh				\
  core/dpoint1d.hxx				\
  core/dpoint2d.hh				\
  core/dpoint2d.hxx				\
  core/dpoint3d.hh				\
  core/dpoint3d.hxx				\
  core/dpointnd.hh				\
  core/fold.hh					\
  core/fwd_iter1d.hh				\
  core/fwd_iter2d.hh				\
  core/fwd_iter3d.hh				\
  core/image.hh					\
  core/image1d.hh				\
  core/image1d_size.hh				\
  core/image2d.hh				\
  core/image2d_size.hh				\
  core/image3d.hh				\
  core/image3d_size.hh				\
  core/image_size.hh				\
  core/imagend_size.hh				\
  core/internal/fake.hh				\
  core/internal/image1d.hh			\
  core/internal/image1d_data.hh			\
  core/internal/image2d.hh			\
  core/internal/image2d_data.hh			\
  core/internal/image3d.hh			\
  core/internal/image3d_data.hh			\
  core/internal/iter1d.hh			\
  core/internal/iter2d.hh			\
  core/internal/iter3d.hh			\
  core/internal/neighborhood.hh			\
  core/internal/objs.hxx			\
  core/internal/real_image1d.hh			\
  core/internal/real_image2d.hh			\
  core/internal/real_image3d.hh			\
  core/internal/rec_operable.hh			\
  core/internal/w_window.hh			\
  core/internal/window.hh			\
  core/iter.hh					\
  core/macros.hh				\
  core/neighborhood.hh				\
  core/neighborhood1d.hh			\
  core/neighborhood2d.hh			\
  core/neighborhood3d.hh			\
  core/objs.hh					\
  core/point.hh					\
  core/point1d.hh				\
  core/point1d.hxx				\
  core/point2d.hh				\
  core/point2d.hxx				\
  core/point3d.hh				\
  core/point3d.hxx				\
  core/pointnd.hh				\
  core/pred.hh					\
  core/pred_image.hh				\
  core/regular_image.hh				\
  core/structelt.hh				\
  core/traverse.hh				\
  core/type.hh					\
  core/typeadj.hh				\
  core/w_window.hh				\
  core/w_window1d.hh				\
  core/w_window2d.hh				\
  core/w_window3d.hh				\
  core/window.hh				\
  core/window1d.hh				\
  core/window2d.hh				\
  core/window3d.hh				\
  core/winiter.hh				\
  core/winneighb.hh				\
  io/base.hh					\
  io/base.hxx					\
  io/basics.hh					\
  io/file.hh					\
  io/pnm.hh					\
  io/pnm3d.hh					\
  io/pnm_read.hxx				\
  io/pnm_read3d.hxx				\
  io/pnm_read_common.hxx			\
  io/pnm_write.hxx				\
  io/pnm_write3d.hxx				\
  io/pnm_write_common.hxx			\
  io/readable.hh				\
  level/cc.hh					\
  level/compare.hh				\
  level/connected.hh				\
  level/extrema_killer.hh			\
  level/fill.hh					\
  level/invert.hh				\
  level/lut.hh					\
  math/macros.hh				\
  meta/array.hh					\
  meta/array.hxx				\
  meta/basics.hh				\
  meta/cmp.hh					\
  meta/control.hh				\
  meta/logic.hh					\
  meta/ucmp.hh					\
  meta/ufuncs.hh				\
  morpho/closing.hh				\
  morpho/closing.inc				\
  morpho/dilation.hh				\
  morpho/erosion.hh				\
  morpho/extrema.hh				\
  morpho/fast_morpho.hh				\
  morpho/fast_morpho.hxx			\
  morpho/geodesic_dilation.hh			\
  morpho/geodesic_erosion.hh			\
  morpho/gradient.hh				\
  morpho/gradient.inc				\
  morpho/hit_or_miss.hh				\
  morpho/hit_or_miss.inc			\
  morpho/laplacian.hh				\
  morpho/laplacian.inc				\
  morpho/minmax.hh				\
  morpho/opening.hh				\
  morpho/opening.inc				\
  morpho/reconstruction.hh			\
  morpho/splitse.hh				\
  morpho/stat.hh				\
  morpho/thinning.hh				\
  morpho/thinning.inc				\
  morpho/thickening.hh				\
  morpho/thickening.inc				\
  morpho/top_hat.hh				\
  morpho/top_hat.inc				\
  morpho/watershed.hh				\
  morpho/watershed.hxx				\
  utils/histogram.hh				\
  utils/stat.hh					\
  utils/timer.hh				\
  value/all.hh					\
  value/bin.hh					\
  value/built_in.hh				\
  value/cast.hh					\
  value/color.hh				\
  value/cplx.hh					\
  value/debug.hh				\
  value/float_p.hh				\
  value/hsi.hh					\
  value/hsl.hh					\
  value/hsv.hh					\
  value/int_s.hh				\
  value/int_u.hh				\
  value/nrgb.hh					\
  value/op_traits.hh				\
  value/ops.hh					\
  value/predefs.hh				\
  value/rec_float.hh				\
  value/rec_int.hh				\
  value/rec_value.hh				\
  value/rgb.hh					\
  value/to_oln.hh				\
  value/vec.hh					\
  value/xyz.hh					\
  value/yiq.hh					\
  value/yuv.hh
